--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -1,9 +1,9 @@
 #
 # This is the main Apache HTTP server configuration file.  It contains the
 # configuration directives that give the server its instructions.
-# See <URL:http://httpd.apache.org/docs/2.2> for detailed information.
+# See <URL:http://httpd.apache.org/docs/2.4/> for detailed information.
 # In particular, see 
-# <URL:http://httpd.apache.org/docs/2.2/mod/directives.html>
+# <URL:http://httpd.apache.org/docs/2.4/mod/directives.html>
 # for a discussion of each configuration directive.
 #
 # Do NOT simply read the instructions in here without understanding
@@ -13,20 +13,32 @@
 # Configuration and logfile names: If the filenames you specify for many
 # of the server's control files begin with "/" (or "drive:/" for Win32), the
 # server will use that explicit path.  If the filenames do *not* begin
-# with "/", the value of ServerRoot is prepended -- so "/var/log/httpd/foo_log"
-# with ServerRoot set to "/usr" will be interpreted by the
-# server as "/usr//var/log/httpd/foo_log".
+# with "/", the value of ServerRoot is prepended -- so "logs/access_log"
+# with ServerRoot set to "/usr/local/apache2" will be interpreted by the
+# server as "/usr/local/apache2/logs/access_log", whereas "/logs/access_log" 
+# will be interpreted as '/logs/access_log'.
 
 #
 # ServerRoot: The top of the directory tree under which the server's
 # configuration, error, and log files are kept.
 #
 # Do not add a slash at the end of the directory path.  If you point
-# ServerRoot at a non-local disk, be sure to point the LockFile directive
-# at a local disk.  If you wish to share the same ServerRoot for multiple
-# httpd daemons, you will need to change at least LockFile and PidFile.
+# ServerRoot at a non-local disk, be sure to specify a local disk on the
+# Mutex directive, if file-based mutexes are used.  If you wish to share the
+# same ServerRoot for multiple httpd daemons, you will need to change at
+# least PidFile.
 #
 ServerRoot "/usr"
+
+#
+# Mutex: Allows you to set the mutex mechanism and mutex file directory
+# for individual mutexes, or change the global defaults
+#
+# Uncomment and change the directory if mutexes are file-based and the default
+# mutex file directory is not on a local disk or is not appropriate for some
+# other reason.
+#
+# Mutex default:/var/run
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -52,73 +64,108 @@ Listen 80
 # LoadModule foo_module modules/mod_foo.so
 #
 LoadModule authn_file_module lib/httpd/modules/mod_authn_file.so
-LoadModule authn_dbm_module lib/httpd/modules/mod_authn_dbm.so
-LoadModule authn_anon_module lib/httpd/modules/mod_authn_anon.so
-LoadModule authn_dbd_module lib/httpd/modules/mod_authn_dbd.so
-LoadModule authn_default_module lib/httpd/modules/mod_authn_default.so
-LoadModule authn_alias_module lib/httpd/modules/mod_authn_alias.so
+#LoadModule authn_dbm_module lib/httpd/modules/mod_authn_dbm.so
+#LoadModule authn_anon_module lib/httpd/modules/mod_authn_anon.so
+#LoadModule authn_dbd_module lib/httpd/modules/mod_authn_dbd.so
+#LoadModule authn_socache_module lib/httpd/modules/mod_authn_socache.so
+LoadModule authn_core_module lib/httpd/modules/mod_authn_core.so
 LoadModule authz_host_module lib/httpd/modules/mod_authz_host.so
 LoadModule authz_groupfile_module lib/httpd/modules/mod_authz_groupfile.so
 LoadModule authz_user_module lib/httpd/modules/mod_authz_user.so
-LoadModule authz_dbm_module lib/httpd/modules/mod_authz_dbm.so
-LoadModule authz_owner_module lib/httpd/modules/mod_authz_owner.so
-LoadModule authnz_ldap_module lib/httpd/modules/mod_authnz_ldap.so
-LoadModule authz_default_module lib/httpd/modules/mod_authz_default.so
+#LoadModule authz_dbm_module lib/httpd/modules/mod_authz_dbm.so
+#LoadModule authz_owner_module lib/httpd/modules/mod_authz_owner.so
+#LoadModule authz_dbd_module lib/httpd/modules/mod_authz_dbd.so
+LoadModule authz_core_module lib/httpd/modules/mod_authz_core.so
+#LoadModule authnz_ldap_module lib/httpd/modules/mod_authnz_ldap.so
+LoadModule access_compat_module lib/httpd/modules/mod_access_compat.so
 LoadModule auth_basic_module lib/httpd/modules/mod_auth_basic.so
-LoadModule auth_digest_module lib/httpd/modules/mod_auth_digest.so
-LoadModule file_cache_module lib/httpd/modules/mod_file_cache.so
-LoadModule cache_module lib/httpd/modules/mod_cache.so
-LoadModule disk_cache_module lib/httpd/modules/mod_disk_cache.so
-LoadModule mem_cache_module lib/httpd/modules/mod_mem_cache.so
-LoadModule dbd_module lib/httpd/modules/mod_dbd.so
-LoadModule dumpio_module lib/httpd/modules/mod_dumpio.so
+#LoadModule auth_form_module lib/httpd/modules/mod_auth_form.so
+#LoadModule auth_digest_module lib/httpd/modules/mod_auth_digest.so
+#LoadModule allowmethods_module lib/httpd/modules/mod_allowmethods.so
+#LoadModule file_cache_module lib/httpd/modules/mod_file_cache.so
+#LoadModule cache_module lib/httpd/modules/mod_cache.so
+#LoadModule cache_disk_module lib/httpd/modules/mod_cache_disk.so
+#LoadModule socache_shmcb_module lib/httpd/modules/mod_socache_shmcb.so
+#LoadModule socache_dbm_module lib/httpd/modules/mod_socache_dbm.so
+#LoadModule socache_memcache_module lib/httpd/modules/mod_socache_memcache.so
+#LoadModule watchdog_module lib/httpd/modules/mod_watchdog.so
+#LoadModule dbd_module lib/httpd/modules/mod_dbd.so
+#LoadModule dumpio_module lib/httpd/modules/mod_dumpio.so
+#LoadModule echo_module lib/httpd/modules/mod_echo.so
+#LoadModule buffer_module lib/httpd/modules/mod_buffer.so
+#LoadModule data_module lib/httpd/modules/mod_data.so
+#LoadModule ratelimit_module lib/httpd/modules/mod_ratelimit.so
 LoadModule reqtimeout_module lib/httpd/modules/mod_reqtimeout.so
-LoadModule ext_filter_module lib/httpd/modules/mod_ext_filter.so
-LoadModule include_module lib/httpd/modules/mod_include.so
+#LoadModule ext_filter_module lib/httpd/modules/mod_ext_filter.so
+#LoadModule request_module lib/httpd/modules/mod_request.so
+#LoadModule include_module lib/httpd/modules/mod_include.so
 LoadModule filter_module lib/httpd/modules/mod_filter.so
-LoadModule substitute_module lib/httpd/modules/mod_substitute.so
-LoadModule deflate_module lib/httpd/modules/mod_deflate.so
-LoadModule ldap_module lib/httpd/modules/mod_ldap.so
+#LoadModule reflector_module lib/httpd/modules/mod_reflector.so
+#LoadModule substitute_module lib/httpd/modules/mod_substitute.so
+#LoadModule sed_module lib/httpd/modules/mod_sed.so
+#LoadModule charset_lite_module lib/httpd/modules/mod_charset_lite.so
+#LoadModule deflate_module lib/httpd/modules/mod_deflate.so
+#LoadModule xml2enc_module lib/httpd/modules/mod_xml2enc.so
+#LoadModule proxy_html_module lib/httpd/modules/mod_proxy_html.so
+LoadModule mime_module lib/httpd/modules/mod_mime.so
+#LoadModule ldap_module lib/httpd/modules/mod_ldap.so
 LoadModule log_config_module lib/httpd/modules/mod_log_config.so
-LoadModule log_forensic_module lib/httpd/modules/mod_log_forensic.so
-LoadModule logio_module lib/httpd/modules/mod_logio.so
+#LoadModule log_debug_module lib/httpd/modules/mod_log_debug.so
+#LoadModule log_forensic_module lib/httpd/modules/mod_log_forensic.so
+#LoadModule logio_module lib/httpd/modules/mod_logio.so
 LoadModule env_module lib/httpd/modules/mod_env.so
-LoadModule mime_magic_module lib/httpd/modules/mod_mime_magic.so
-LoadModule cern_meta_module lib/httpd/modules/mod_cern_meta.so
-LoadModule expires_module lib/httpd/modules/mod_expires.so
+#LoadModule mime_magic_module lib/httpd/modules/mod_mime_magic.so
+#LoadModule expires_module lib/httpd/modules/mod_expires.so
 LoadModule headers_module lib/httpd/modules/mod_headers.so
-LoadModule ident_module lib/httpd/modules/mod_ident.so
-LoadModule usertrack_module lib/httpd/modules/mod_usertrack.so
-LoadModule unique_id_module lib/httpd/modules/mod_unique_id.so
+#LoadModule usertrack_module lib/httpd/modules/mod_usertrack.so
+#LoadModule unique_id_module lib/httpd/modules/mod_unique_id.so
 LoadModule setenvif_module lib/httpd/modules/mod_setenvif.so
 LoadModule version_module lib/httpd/modules/mod_version.so
+#LoadModule remoteip_module lib/httpd/modules/mod_remoteip.so
 LoadModule proxy_module lib/httpd/modules/mod_proxy.so
 LoadModule proxy_connect_module lib/httpd/modules/mod_proxy_connect.so
-LoadModule proxy_ftp_module lib/httpd/modules/mod_proxy_ftp.so
-LoadModule proxy_http_module lib/httpd/modules/mod_proxy_http.so
+#LoadModule proxy_ftp_module lib/httpd/modules/mod_proxy_ftp.so
+#LoadModule proxy_http_module lib/httpd/modules/mod_proxy_http.so
+LoadModule proxy_fcgi_module lib/httpd/modules/mod_proxy_fcgi.so
 LoadModule proxy_scgi_module lib/httpd/modules/mod_proxy_scgi.so
-LoadModule proxy_ajp_module lib/httpd/modules/mod_proxy_ajp.so
-LoadModule proxy_balancer_module lib/httpd/modules/mod_proxy_balancer.so
-LoadModule ssl_module lib/httpd/modules/mod_ssl.so
-LoadModule mime_module lib/httpd/modules/mod_mime.so
-LoadModule dav_module lib/httpd/modules/mod_dav.so
-LoadModule status_module lib/httpd/modules/mod_status.so
+#LoadModule proxy_fdpass_module lib/httpd/modules/mod_proxy_fdpass.so
+#LoadModule proxy_ajp_module lib/httpd/modules/mod_proxy_ajp.so
+#LoadModule proxy_balancer_module lib/httpd/modules/mod_proxy_balancer.so
+LoadModule proxy_express_module lib/httpd/modules/mod_proxy_express.so
+#LoadModule session_module lib/httpd/modules/mod_session.so
+#LoadModule session_cookie_module lib/httpd/modules/mod_session_cookie.so
+#LoadModule session_dbd_module lib/httpd/modules/mod_session_dbd.so
+#LoadModule slotmem_shm_module lib/httpd/modules/mod_slotmem_shm.so
+#LoadModule slotmem_plain_module lib/httpd/modules/mod_slotmem_plain.so
+#LoadModule ssl_module lib/httpd/modules/mod_ssl.so
+#LoadModule dialup_module lib/httpd/modules/mod_dialup.so
+LoadModule lbmethod_byrequests_module lib/httpd/modules/mod_lbmethod_byrequests.so
+LoadModule lbmethod_bytraffic_module lib/httpd/modules/mod_lbmethod_bytraffic.so
+LoadModule lbmethod_bybusyness_module lib/httpd/modules/mod_lbmethod_bybusyness.so
+#LoadModule lbmethod_heartbeat_module lib/httpd/modules/mod_lbmethod_heartbeat.so
+LoadModule mpm_event_module lib/httpd/modules/mod_mpm_event.so
+LoadModule unixd_module lib/httpd/modules/mod_unixd.so
+#LoadModule heartbeat_module lib/httpd/modules/mod_heartbeat.so
+#LoadModule heartmonitor_module lib/httpd/modules/mod_heartmonitor.so
+#LoadModule dav_module lib/httpd/modules/mod_dav.so
+#LoadModule status_module lib/httpd/modules/mod_status.so
 LoadModule autoindex_module lib/httpd/modules/mod_autoindex.so
-LoadModule asis_module lib/httpd/modules/mod_asis.so
-LoadModule info_module lib/httpd/modules/mod_info.so
+#LoadModule asis_module lib/httpd/modules/mod_asis.so
+#LoadModule info_module lib/httpd/modules/mod_info.so
+LoadModule cgid_module lib/httpd/modules/mod_cgid.so
 LoadModule cgi_module lib/httpd/modules/mod_cgi.so
-LoadModule dav_fs_module lib/httpd/modules/mod_dav_fs.so
-LoadModule vhost_alias_module lib/httpd/modules/mod_vhost_alias.so
-LoadModule negotiation_module lib/httpd/modules/mod_negotiation.so
+#LoadModule dav_fs_module lib/httpd/modules/mod_dav_fs.so
+#LoadModule dav_lock_module lib/httpd/modules/mod_dav_lock.so
+#LoadModule vhost_alias_module lib/httpd/modules/mod_vhost_alias.so
+#LoadModule negotiation_module lib/httpd/modules/mod_negotiation.so
 LoadModule dir_module lib/httpd/modules/mod_dir.so
-LoadModule imagemap_module lib/httpd/modules/mod_imagemap.so
-LoadModule actions_module lib/httpd/modules/mod_actions.so
-LoadModule userdir_module lib/httpd/modules/mod_userdir.so
+#LoadModule actions_module lib/httpd/modules/mod_actions.so
+#LoadModule speling_module lib/httpd/modules/mod_speling.so
+#LoadModule userdir_module lib/httpd/modules/mod_userdir.so
 LoadModule alias_module lib/httpd/modules/mod_alias.so
 LoadModule rewrite_module lib/httpd/modules/mod_rewrite.so
 
-<IfModule !mpm_netware_module>
-<IfModule !mpm_winnt_module>
+<IfModule unixd_module>
 #
 # If you wish httpd to run as a different user or group, you must run
 # httpd as root initially and it will switch.  
@@ -130,7 +177,6 @@ LoadModule rewrite_module lib/httpd/modules/mod_rewrite.so
 User apache
 Group apache
 
-</IfModule>
 </IfModule>
 
 # 'Main' server configuration
@@ -162,25 +208,13 @@ ServerAdmin you@example.com
 #ServerName www.example.com:80
 
 #
-# DocumentRoot: The directory out of which you will serve your
-# documents. By default, all requests are taken from this directory, but
-# symbolic links and aliases may be used to point to other locations.
-#
-DocumentRoot "/srv/www"
-
-#
-# Each directory to which Apache has access can be configured with respect
-# to which services and features are allowed and/or disabled in that
-# directory (and its subdirectories). 
-#
-# First, we configure the "default" to be a very restrictive set of 
-# features.  
+# Deny access to the entirety of your server's filesystem. You must
+# explicitly permit access to web content directories in other 
+# <Directory> blocks below.
 #
 <Directory />
-    Options FollowSymLinks
-    AllowOverride None
-    Order deny,allow
-    Deny from all
+    AllowOverride none
+    Require all denied
 </Directory>
 
 #
@@ -191,9 +225,12 @@ DocumentRoot "/srv/www"
 #
 
 #
-# This should be changed to whatever you set DocumentRoot to.
+# DocumentRoot: The directory out of which you will serve your
+# documents. By default, all requests are taken from this directory, but
+# symbolic links and aliases may be used to point to other locations.
 #
-<Directory "/srv/www">
+DocumentRoot "/srv/httpd/htdocs"
+<Directory "/srv/httpd/htdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -203,7 +240,7 @@ DocumentRoot "/srv/www"
     # doesn't give it to you.
     #
     # The Options directive is both complicated and important.  Please see
-    # http://httpd.apache.org/docs/2.2/mod/core.html#options
+    # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
     Options Indexes FollowSymLinks
@@ -218,9 +255,7 @@ DocumentRoot "/srv/www"
     #
     # Controls who can get stuff from this server.
     #
-    Order allow,deny
-    Allow from all
-
+    Require all granted
 </Directory>
 
 #
@@ -228,18 +263,16 @@ DocumentRoot "/srv/www"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex /cgi-bin/services.py index.html index.php
+    DirectoryIndex index.html
 </IfModule>
 
 #
 # The following lines prevent .htaccess and .htpasswd files from being 
 # viewed by Web clients. 
 #
-<FilesMatch "^\.ht">
-    Order allow,deny
-    Deny from all
-    Satisfy All
-</FilesMatch>
+<Files ".ht*">
+    Require all denied
+</Files>
 
 #
 # ErrorLog: The location of the error log file.
@@ -313,8 +346,7 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    #ScriptAlias /cgi-bin/ "/srv/httpd/cgi-bin/"
-    #Alias /microblog/ "/srv/httpd/htdocs/microblog/"
+    ScriptAlias /cgi-bin/ "/srv/httpd/cgi-bin/"
 
 </IfModule>
 
@@ -323,30 +355,18 @@ LogLevel warn
     # ScriptSock: On threaded servers, designate the path to the UNIX
     # socket used to communicate with the CGI daemon of mod_cgid.
     #
-    #Scriptsock /var/run/httpd/cgisock
+    #Scriptsock cgisock
 </IfModule>
 
 #
 # "/srv/httpd/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-#<Directory "/srv/httpd/cgi-bin">
-#    AllowOverride None
-#    Options None
-#    Order allow,deny
-#    Allow from all
-#</Directory>
-
-#
-# DefaultType: the default MIME type the server will use for a document
-# if it cannot otherwise determine one, such as from filename extensions.
-# If your server contains mostly text or HTML documents, "text/plain" is
-# a good value.  If most of your content is binary, such as applications
-# or images, you may want to use "application/octet-stream" instead to
-# keep browsers from trying to display binary files as though they are
-# text.
-#
-DefaultType text/plain
+<Directory "/srv/httpd/cgi-bin">
+    AllowOverride None
+    Options None
+    Require all granted
+</Directory>
 
 <IfModule mime_module>
     #
@@ -412,19 +432,26 @@ DefaultType text/plain
 #ErrorDocument 404 /missing.html
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
 #ErrorDocument 402 http://www.example.com/subscription_info.html
+#
 
-ErrorDocument 404 /index.html
+#
+# MaxRanges: Maximum number of Ranges in a request before
+# returning the entire resource, or one of the special
+# values 'default', 'none' or 'unlimited'.
+# Default setting is to accept 200 Ranges.
+#MaxRanges unlimited
 
 #
 # EnableMMAP and EnableSendfile: On systems that support it, 
-# memory-mapping or the sendfile syscall is used to deliver
+# memory-mapping or the sendfile syscall may be used to deliver
 # files.  This usually improves server performance, but must
 # be turned off when serving from networked-mounted 
 # filesystems or if support for these functions is otherwise
 # broken on your system.
+# Defaults: EnableMMAP On, EnableSendfile Off
 #
 #EnableMMAP off
-#EnableSendfile off
+#EnableSendfile on
 
 # Supplemental configuration
 #
@@ -449,7 +476,7 @@ ErrorDocument 404 /index.html
 #Include /etc/httpd/extra/httpd-userdir.conf
 
 # Real-time info on requests and configuration
-Include /etc/httpd/extra/httpd-info.conf
+#Include /etc/httpd/extra/httpd-info.conf
 
 # Virtual hosts
 #Include /etc/httpd/extra/httpd-vhosts.conf
@@ -463,6 +490,11 @@ Include /etc/httpd/extra/httpd-info.conf
 # Various default settings
 #Include /etc/httpd/extra/httpd-default.conf
 
+# Configure mod_proxy_html to understand HTML4/XHTML1
+<IfModule proxy_html_module>
+Include /etc/httpd/extra/proxy-html.conf
+</IfModule>
+
 # Secure (SSL/TLS) connections
 Include /etc/httpd/extra/httpd-ssl.conf
 #
@@ -475,35 +507,22 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+# Deal with user agents that deliberately violate open standards
+#
+<IfModule setenvif_module>
+BrowserMatch "MSIE 10.0;" bad_DNT
+</IfModule>
+<IfModule headers_module>
+RequestHeader unset DNT env=bad_DNT
+</IfModule>
+
+
 # Uncomment the following line to enable PHP:
+#
 #Include /etc/httpd/mod_php.conf
 
-# Uncomment the following lines to enable svn support:
+# Uncomment the following lines (and mod_dav above) to enable svn support:
+#
 #LoadModule dav_svn_module lib/httpd/modules/mod_dav_svn.so
 #LoadModule authz_svn_module lib/httpd/modules/mod_authz_svn.so
-
-# Expose web applications to the users through Apache.  By doing this here we
-# take advantage of HTTPS as well as HTTP.
-<IfModule mod_proxy.c>
-	ProxyVia On
-	ProxyRequests Off
-	
-	ProxyPass /olsrviz http://localhost:8089
-	ProxyPassReverse /olsrviz http://localhost:8089
-
-	ProxyPreserveHost On	
-	ProxyPass /chat http://localhost:8989
-	ProxyPassReverse /chat http://localhost:8989
-	
-	ProxyPass /pad/ http://localhost:9001/
-	ProxyPassReverse /pad/ http://localhost:9001/
-	
-	ProxyPreserveHost On
-	<Proxy *>
-		Options FollowSymLinks MultiViews
-		AllowOverride All
-		Order allow,deny
-		allow from all
-	</Proxy>
-</IfModule>
 
